<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context=".SignupActivity">
    <EditText
        android:id="@+id/userNameSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"
        android:hint="@string/username"
        android:inputType="text"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/emailSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/userNameSignup"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/passwordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailSignup"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/mybutton"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignup" />

    <TextView
        android:id="@+id/btnSignInSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_to_signin_form"
        android:textColor="@color/light_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup"
        android:layout_marginTop="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>