<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:padding="40dp">

    <TextView
        android:id="@+id/homePageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="My Tasks"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homePageTitle">

        <Button
            android:id="@+id/shopButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/mybutton"
            android:text="Shop"
            style="@style/TextAppearance.AppCompat.Small"
            android:textAllCaps="false"
            android:textColor="@color/gray_text" />

        <Button
            android:id="@+id/studyButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="@drawable/mybutton"
            android:text="Study"
            style="@style/TextAppearance.AppCompat.Small"
            android:textAllCaps="false"
            android:textColor="@color/gray_text"
            android:layout_marginEnd="10dp"
            />
        <Button
            android:id="@+id/trainButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="@drawable/mybutton"
            android:text="Train"
            android:textColor="@color/gray_text"
            style="@style/TextAppearance.AppCompat.Small"
            android:textAllCaps="false"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="myTasks"
        android:src="@drawable/tasks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="40dp"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/addTask"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:text="@string/add_task"
            android:layout_marginEnd="20dp"
            android:textColor="@color/gray_text"
            android:background="@drawable/mybutton"/>

        <Button
            android:id="@+id/allTasks"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:text="@string/all_tasks"
            android:background="@drawable/mybutton"
            android:textColor="@color/gray_text"

            />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_settings"
        android:contentDescription="@string/settings"
        android:background="@color/light_blue"
        android:backgroundTint="@color/light_blue"
        />

</androidx.constraintlayout.widget.ConstraintLayout>